@@ -8,6 +8,7 @@ import (
 	"errors"
 	"expvar"
 	"io"
+	"math"
 	"net"
 	"time"
 
@@ -135,7 +136,7 @@ func (l *lumberjackClient) publishWindowed(events []common.MapStr) (int, error) 
 		batchSize, l.windowSize)
 
 	// prepare message payload
-	if len(events) > l.windowSize {
+	if batchSize > l.windowSize {
 		events = events[:l.windowSize]
 	}
 
@@ -178,29 +179,13 @@ func (l *lumberjackClient) publishWindowed(events []common.MapStr) (int, error) 
 		}
 	}
 
-	// success: increase window size by factor 1.5 until max window size
-	// (window size grows exponentially)
-	// TODO: use duration until ACK to estimate an ok max window size value
-	if l.maxOkWindowSize < l.windowSize {
-		l.maxOkWindowSize = l.windowSize
-
-		if l.windowSize < l.maxWindowSize {
-			l.windowSize = l.windowSize + l.windowSize/2
-			if l.windowSize > l.maxWindowSize {
-				l.windowSize = l.maxWindowSize
-			}
-		}
-	} else if l.windowSize < l.maxOkWindowSize {
-		l.windowSize = l.windowSize + l.windowSize/2
-		if l.windowSize > l.maxOkWindowSize {
-			l.windowSize = l.maxOkWindowSize
-		}
-	}
-
+	l.tryGrowWindowSize(batchSize)
 	return len(events), nil
 }
 
 func (l *lumberjackClient) onFail(n int, err error) (int, error) {
+	l.shrinkWindow()
+
 	// if timeout error, back off and ignore error
 	nerr, ok := err.(net.Error)
 	if !ok || !nerr.Timeout() {
@@ -216,14 +201,50 @@ func (l *lumberjackClient) onFail(n int, err error) (int, error) {
 		return n, err
 	}
 
-	// timeout error. reduce window size and return 0 published events. Send
+	// timeout error. events. Send
 	// mode might try to publish again with reduce window size or ask another
 	// client to send events
+	return n, nil
+}
+
+// Increase window size by factor 1.5 until max window size
+// (window size grows exponentially)
+// TODO: use duration until ACK to estimate an ok max window size value
+func (l *lumberjackClient) tryGrowWindowSize(batchSize int) {
+	if l.windowSize <= batchSize {
+		if l.maxOkWindowSize < l.windowSize {
+			logp.Debug("logstash", "update max ok window size: %v < %v", l.maxOkWindowSize, l.windowSize)
+			l.maxOkWindowSize = l.windowSize
+
+			newWindowSize := int(math.Ceil(1.5 * float64(l.windowSize)))
+			logp.Debug("logstash", "increase window size to: %v", newWindowSize)
+
+			if l.windowSize <= batchSize && batchSize < newWindowSize {
+				logp.Debug("logstash", "set to batchSize: %v", batchSize)
+				newWindowSize = batchSize
+			}
+			if newWindowSize > l.maxWindowSize {
+				logp.Debug("logstash", "set to max window size: %v", l.maxWindowSize)
+				newWindowSize = l.maxWindowSize
+			}
+			l.windowSize = newWindowSize
+		} else if l.windowSize < l.maxOkWindowSize {
+			logp.Debug("logstash", "update current window size: %v", l.windowSize)
+
+			l.windowSize = int(math.Ceil(1.5 * float64(l.windowSize)))
+			if l.windowSize > l.maxOkWindowSize {
+				logp.Debug("logstash", "set to max ok window size: %v", l.maxOkWindowSize)
+				l.windowSize = l.maxOkWindowSize
+			}
+		}
+	}
+}
+
+func (l *lumberjackClient) shrinkWindow() {
 	l.windowSize = l.windowSize / 2
 	if l.windowSize < minWindowSize {
 		l.windowSize = minWindowSize
 	}
-	return n, nil
 }
 
 func (l *lumberjackClient) serializeEvents(
